<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Noustea</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/nav_header_desc</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="preferences_file_key">noustea.PREFERENCES</string>

    <string name="menu_viewport">Model</string>
    <string name="menu_dily">Seznam dílů</string>
    <string name="menu_sol">Solární panely</string>
    <string name="menu_rad">Radiátory</string>
    <string name="menu_ring">Ring</string>
    <string name="menu_strany">Postranní moduly</string>
    <string name="menu_celek">Celek</string>
    <string name="menu_group_info">Informace</string>

    <string name="col_apply">Použít</string>

    <string name="info_rychlost">Rotační rychlost: </string>
    <string name="info_zrychleni">Gravitační zrychlení: </string>
    <string name="info_hmotnost">Hmotnost: </string>
    <string name="info_uhel">Úhel: </string>
    <string name="info_efektivita">Efektivita: </string>
    <string name="info_typ">Typ: </string>
    <string name="info_popis">Popis: </string>
    <string name="info"> Informace </string>

    <string name="pi1_online">Pi 1: Online</string>
    <string name="pi1_offline">Pi 1: Offline</string>
    <string name="pi2_online">Pi 2: Online</string>
    <string name="pi2_offline">Pi 2: Offline</string>
    <string name="refresh">Obnovit</string>
    <string name="module_placeholder_type">Type of the module</string>
    <string name="module_placeholder_desc">Description of the module</string>
    <string name="module_placeholder_mass">Mass of the module</string>

    <string-array name="colors_array">
        <item>Vypnuto</item>
        <item>Zapnuto</item>
        <item>Červená</item>
        <item>Zelená</item>
        <item>Modrá</item>
        <item>Azurová</item>
        <item>Purpurová</item>
        <item>Žlutá</item>
    </string-array>
</resources>