<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_viewport"
            android:icon="@drawable/ic_nav_viewport"
            android:title="@string/menu_viewport" />
    </group>

    <item android:title="@string/menu_group_info">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sol"
                    android:icon="@drawable/ic_nav_sol"
                    android:title="@string/menu_sol" />
                <item
                    android:id="@+id/nav_rad"
                    android:icon="@drawable/ic_nav_rad"
                    android:title="@string/menu_rad" />
                <item
                    android:id="@+id/nav_ring"
                    android:icon="@drawable/ic_nav_ring"
                    android:title="@string/menu_ring" />
                <item
                    android:id="@+id/nav_strany"
                    android:icon="@drawable/ic_nav_strany"
                    android:title="@string/menu_strany" />
            </group>
        </menu>
    </item>
</menu>