<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:baselineAligned="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_rychlost"
            android:textSize="30sp"
            android:padding="50sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_zrychleni"
            android:textSize="30sp"
            android:padding="50sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginHorizontal="50sp"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="400sp"
                android:layout_height="400sp"
                android:src="@drawable/ani_ring"
                android:id="@+id/ring_ani"
                android:layout_gravity="start"/>

            <SeekBar
                android:id="@+id/ring_speed"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:rotation="270" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".1">
        <Button
            android:id="@+id/ring_col_prev"
            android:layout_width="300sp"
            android:layout_height="100sp"
            android:layout_marginBottom="25sp" />

        <SeekBar
            android:id="@+id/ring_col_red"
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:max="255"
            android:progressTint="#FF0000" />

        <SeekBar
            android:id="@+id/ring_col_green"
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:max="255"
            android:progressTint="#00FF00" />

        <SeekBar
            android:id="@+id/ring_col_blue"
            android:layout_width="400sp"
            android:layout_height="wrap_content"
            android:layout_margin="25sp"
            android:max="255"
            android:progressTint="#0000FF" />

        <Button
            android:layout_width="300sp"
            android:layout_height="75sp"
            android:backgroundTint="#4A00E0"
            android:text="@string/col_apply"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>