<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/module_info_type"
        android:text="@string/module_placeholder_type"
        android:textSize="30sp"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/module_edit_type"
        android:visibility="gone"
        android:layout_marginHorizontal="20sp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/module_placeholder_type"
            android:textAlignment="center"
            android:inputType="text"
            android:id="@+id/module_edit_type_text"
            android:textSize="30sp"
            android:imeOptions="actionDone"
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:layout_width="50sp"
            android:layout_height="45sp"
            android:layout_toEndOf="@id/module_edit_type_text"
            android:layout_marginHorizontal="10sp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_check"
            app:tint="#FFFFFF"
            android:id="@+id/module_edit_type_btn"/>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/module_info_desc"
        android:text="@string/module_placeholder_desc"
        android:textSize="25sp"
        android:textAlignment="center"
        android:clickable="true"
        android:focusable="true"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/module_edit_desc"
        android:visibility="gone"
        android:layout_marginHorizontal="20sp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/module_edit_desc_text"
            android:text="@string/module_placeholder_desc"
            android:textSize="25sp"
            android:textAlignment="center"
            android:inputType="textMultiLine"/>
        <ImageButton
            android:layout_width="50sp"
            android:layout_height="45sp"
            android:layout_toEndOf="@id/module_edit_desc_text"
            android:layout_marginHorizontal="10sp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_check"
            app:tint="#FFFFFF"
            android:id="@+id/module_edit_desc_btn"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/module_layout_mass">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_weight"
            app:tint="#FFFFFF"
            android:layout_toStartOf="@id/module_info_mass"/>

        <TextView
            android:id="@+id/module_info_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/module_placeholder_mass"
            android:textSize="25sp"
            android:textAlignment="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/module_edit_mass"
        android:visibility="gone"
        android:layout_marginHorizontal="20sp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_weight"
            app:tint="#FFFFFF"
            android:layout_toStartOf="@id/module_edit_mass_text"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/module_placeholder_mass"
            android:textAlignment="center"
            android:inputType="text"
            android:id="@+id/module_edit_mass_text"
            android:textSize="25sp"
            android:imeOptions="actionDone"
            android:layout_centerHorizontal="true"/>
        <ImageButton
            android:layout_width="50sp"
            android:layout_height="45sp"
            android:layout_toEndOf="@id/module_edit_mass_text"
            android:layout_marginHorizontal="10sp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_check"
            app:tint="#FFFFFF"
            android:id="@+id/module_edit_mass_btn"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="500sp"
        android:layout_height="150sp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="30sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/module_edit_color"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4A00E0"
                android:src="@drawable/icon_color"
                android:id="@+id/module_info_apply"
                android:layout_weight="1"
                app:tint="#FFFFFF"
                android:layout_marginStart="50sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>